--- a/css/style.css
+++ b/css/style.css
@@ -10,46 +10,91 @@
 	src:url("fonts/quicksand-bold.ttf") format("truetype");
 	src:url("fonts/quicksand-bold.svg") format("svg");
 }
-@media (min-width:0px){
+@media (min-width:225px){
 	.pet {background-color: red;
 	max-width: 320px;
 	}
+	.crimson {
+		padding-bottom: 18px; 
+		font-size: 16px; 
+	}		
 }
 @media (min-width:320px){
-	.pet {background-color: orange;
-	max-width: 640px;}
+	.pet {
+		background-color: orange;
+		max-width: 640px;
+	}
+	.psd-files {
+	  max-height: 75px;
+	}
+	.gray {
+		padding-top: 33px;
+		font-size: 12px; 
+		padding-bottom:35px; 
+	}
+	.crimson {
+		padding-top: 33px;
+		padding-bottom: 30px; 
+		font-size: 16px; 
+	}									
 }
 @media (min-width:640px){
-	.pet {background-color: yellow;
-	max-width: 980px;}
+	.pet {
+		background-color: yellow;
+		max-width: 980px;
+	}
+	.psd-files {
+		max-height: 150px; 								
+	}
+	.gray {
+		padding-top: 68px;
+		font-size: 18px; 
+		padding-bottom: 70px; 
+	}
+	.crimson {
+		padding-top: 68px;
+		padding-bottom: 64px;
+		font-size: 22px; 
+	}
 }
 @media (min-width:980px){
-	.pet {background-color: pink;
-	max-width: 1024px;}
+	.pet {
+		background-color: pink;
+		max-width: 1024px;
+	}
+	.psd-files {
+		max-height: 233px; 
+	}
+	.gray {
+		padding-top: 105px;
+		font-size: 28px; 
+		padding-bottom: 103px; 
+	}
+	.crimson {
+		padding-top: 105px;
+		padding-bottom: 103px; 
+		font-size: 30px; 
+	}
 }
 @media (min-width:1024px){
-	.pet{background-color: green;
-	min-width: 1024px;}
+	.pet{
+		background-color: green;
+		min-width: 1024px;
+	}
+	.psd-files {
+		max-height: 245px; 
+	}
+	.gray {
+		padding-top: 110px;
+		font-size: 28px; 
+		padding-bottom: 113px; 
+	}
+	.crimson {
+		padding-top: 110px;
+		padding-bottom: 108px; 
+		font-size: 32px; 
+  }
 }
-/*.rectangle {
-	max-height: 338px;
-	max-width: 640px;
-	width: auto;
-	height: auto;
-	background-color: #5b0fa1;
-	padding-top: 125px;
-	padding-bottom: 125px;
-	color: #fff;
-	font-size: 66px;
-	text-align: center;
-	font-family: "quicksand-bold", sans-serif;
-	font-weight: bold;
-	text-decoration: none;
-}*/
-
-
-/* для 1024px  */
-
 .img-range a:hover {
 	text-decoration: none;
 }
@@ -74,22 +119,14 @@ a {
 	width: 350px;
 }
 .psd-files {
-	max-height: 245px;
 	padding-bottom: 0px !important;
 	margin-bottom: 0 !important;
 }
 .gray {
-	padding-top: 98px;
 	color: #9282a0;
 	background-color: #27212c;
-	font-size: 32px;
-	padding-bottom: 108px;
-
 }
 .crimson {
-	padding-top: 98px;
-	padding-bottom: 108px;
-	font-size: 32px;
 	color: #ffffff;
 	text-align: center;
 	background-color: #bc3183
