--- a/css/style.css
+++ b/css/style.css
@@ -18,10 +18,6 @@
 		padding-bottom: 18px; 
 		font-size: 16px; 
 	}
-	.text .img-range .psd-files .aqua .navigation {
-		margin-left: 0;
-		margin-right: 0;
-	}		
 }
 @media (min-width:320px){
 	.pet {
@@ -40,11 +36,7 @@
 		padding-top: 33px;
 		padding-bottom: 30px; 
 		font-size: 16px; 
-	}
-	.text .img-range .psd-files .aqua .navigation {
-		margin-left: 0;
-		margin-right: 0;
-	}									
+	}								
 }
 @media (min-width:640px){
 	.pet {
@@ -63,10 +55,6 @@
 		padding-top: 68px;
 		padding-bottom: 64px;
 		font-size: 22px; 
-	}
-	.text .img-range .psd-files .aqua .navigation {
-		margin-left: 0;
-		margin-right: 0;
 	}
 }
 @media (min-width:980px){
@@ -133,6 +121,7 @@ a {
 .psd-files {
 	padding-bottom: 0px !important;
 	margin-bottom: 0 !important;
+	
 }
 .gray {
 	color: #9282a0;
@@ -141,5 +130,14 @@ a {
 .crimson {
 	color: #ffffff;
 	text-align: center;
-	background-color: #bc3183
+	background-color: #bc3183;
+	font-family: "monospace";
+	font-weight: bold;
 }
+.col-xs-3.col-sm-3.col-md-3.col-lg-3.crimson {
+	font-family: "monospace";
+}
+/*.text .img-range .psd-files .aqua .navigation {
+		margin-left: 0 !important;
+		margin-right: 0 !important;
+	}		*/
