--- a/css/style.css
+++ b/css/style.css
@@ -161,14 +161,14 @@ a {
 	color: #fff;
 	margin-top: 200px;
 	font-family: "Montserrat-Regular", sans-serif;
-	font-size: 60px;/**//**//**/
+	/*font-size: 60px;/**//**//**/
 	line-height: 65px;/**//**//**/
 }
 .aqua h4 {
 	opacity: 0.8;
 	color: #fff;
 	font-family: "Montserrat-Regular", sans-serif;
-	font-size: 34px;/**//**//**/
+	/*font-size: 34px;/**//**//**/
 	line-height: 65px;/**//**//**/
 }
 .aqua span {
