--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,10 @@
 	.aqua h4 {
 		font-size: 20px;
 		line-height: 65px;
-	}		
+	}
+	.text-block .row {
+	margin-bottom: 45px;
+}		
 }
 @media (min-width:640px){
 	.pet {
@@ -81,6 +84,9 @@
 		font-size: 25px;
 		line-height: 65px;
 	}
+	.text-block .row {
+	margin-bottom: 100px;
+}
 }
 @media (min-width:980px){
 	.pet {
@@ -109,6 +115,9 @@
 		font-size: 28px;
 		line-height: 65px;
 	}
+	.text-block .row {
+	margin-bottom: 100px;
+	}
 }
 @media (min-width:1024px){
 	.pet{
@@ -136,6 +145,9 @@
 	.aqua h4 {
 		font-size: 34px;
 		line-height: 65px;
+	}
+	.text-block .row {
+		margin-bottom: 170px;
 	}
 }
 .img-range a:hover {
@@ -178,12 +190,10 @@ a {
 	line-height: 65px;
 	font-weight: bold;
 }
-
-.psd-files {
-	padding-bottom: 0px !important;
-	margin-bottom: 0 !important;
-
+.psd-files .row{
+	background-color: #27212c;
 }
+
 .gray {
 	color: #9282a0;
 	background-color: #27212c;
@@ -192,11 +202,8 @@ a {
 	color: #ffffff;
 	text-align: center;
 	background-color: #bc3183;
-	font-family: "monospace";
+	font-family: "quicksand-bold", sans-serif;
 	font-weight: bold;
-}
-.col-xs-3.col-sm-3.col-md-3.col-lg-3.crimson {
-	font-family: "monospace";
 }
 .navigation {
  	background-color: #373c3f;
@@ -209,4 +216,19 @@ a {
 }
 #navbar {
 	margin-bottom: -20px;
+}
+.text-block {
+	background-color: #ebebeb;
+}
+.text-block p{
+	font-size: 14px;
+	color: #515151;
+	line-height: 26px;
+	font-family: "Montserrat-Regular", sans-serif;
+}
+.text-block h2 {
+	font-size: 30px;
+	color: #088ca5;
+	line-height: 44px;
+	font-family: "Montserrat-Regular", sans-serif;
 }
