--- a/css/style.css
+++ b/css/style.css
@@ -17,28 +17,20 @@
 	src:url("fonts/Montserrat-Regular.ttf") format("truetype");
 	src:url("fonts/Montserrat-Regular.svg") format("svg");
 }
-@media screen, handheld and (min-width:225px){
-	.pet {
-		background-color: red;
-	  max-width: 320px;
-	}
+@media screen, handheld and (min-width:225px) {
 	.gray {
 		padding-top: 33px;
-		font-size: 12px; 
-		padding-bottom:35px; 
+		font-size: 12px;
+		padding-bottom:35px;
 	}
 	.crimson {
-		padding-bottom: 18px; 
-		font-size: 16px; 
+		padding-bottom: 18px;
+		font-size: 16px;
 	}
 }
-@media screen, handheld and (min-width:320px){
+@media screen, handheld and (min-width:320px) {
 	img {
 		width: 100%;
-	}
-	.pet {
-		background-color: orange;
-		max-width: 640px;
 	}
 	.psd-files {
 	  max-height: 75px;
@@ -46,11 +38,11 @@
 	.gray {
 		padding-top: 33px;
 		font-size: 12px; 
-		padding-bottom:35px; 
+		padding-bottom:35px;
 	}
 	.crimson {
 		padding-top: 33px;
-		padding-bottom: 30px; 
+		padding-bottom: 30px;
 		font-size: 16px; 
 	}
 	.aqua h2 {
@@ -64,20 +56,16 @@
 	}
 	.text-block .row {
 	margin-bottom: 45px;
-	}		
-}
-@media screen, handheld and (min-width:640px){
-	.pet {
-		background-color: yellow;
-		max-width: 980px;
 	}
+}
+@media screen, handheld and (min-width:640px) {
 	.psd-files {
-		max-height: 150px; 								
+		max-height: 150px;
 	}
 	.gray {
 		padding-top: 68px;
 		font-size: 14px; 
-		padding-bottom: 70px; 
+		padding-bottom: 70px;
 	}
 	.crimson {
 		padding-top: 68px;
@@ -85,7 +73,7 @@
 		font-size: 22px; 
 	}
 	.aqua h2 {
-		font-size: 40px;width: 440px; 
+		font-size: 40px;width: 440px;
 		line-height: 65px;
 	}
 	.aqua h4 {
@@ -96,27 +84,23 @@
 	margin-bottom: 100px;
 	}
 }
-@media screen and (min-width:980px){
+@media screen and (min-width:980px) {
 	#navbar-name {
 		visibility: hidden;
 		display: none;
 	}
-	.pet {
-		background-color: pink;
-		max-width: 1024px;
-	}
 	.psd-files {
-		max-height: 233px; 
+		max-height: 233px;
 	}
 	.gray {
 		padding-top: 105px;
 		font-size: 28px; 
-		padding-bottom: 105px; 
+		padding-bottom: 105px;
 	}
 	.crimson {
 		padding-top: 105px;
 		padding-bottom: 103px; 
-		font-size: 30px; 
+		font-size: 30px;
 	}
 	.aqua h2 {
 		width: 680px; 
@@ -131,30 +115,26 @@
 	margin-bottom: 100px;
 	}
 }
-@media screen and (min-width:1024px){
+@media screen and (min-width:1024px) {
 	#navbar-name {
 		visibility: hidden;
 		display: none;
-	}
-	.pet{
-		background-color: green;
-		min-width: 1024px;
 	}
 	.psd-files {
 		max-height: 245px; 
 	}
 	.gray {
 		padding-top: 110px;
-		font-size: 28px; 
-		padding-bottom: 113px; 
+		font-size: 28px;
+		padding-bottom: 113px;
 	}
 	.crimson {
 		padding-top: 110px;
-		padding-bottom: 108px; 
+		padding-bottom: 108px;
 		font-size: 32px; 
   }
   .aqua h2 {
-  	width: 680px; 
+  	width: 680px;
 		font-size: 60px;
 		line-height: 65px;
 	}
@@ -173,11 +153,11 @@ a {
 	text-decoration: none;
 }
 .bar {
-	padding-left:0 !important;
+	padding-left: 0 !important;
 	padding-right: 0 !important;
 }
 .aqua {
-	height: 576px;/*548*/ /*350*/ /*175*/
+	height: 576px;
 	background: #19b4c6; /* Old browsers */
 	background: -moz-linear-gradient(top, #19b4c6 39%, #078aa4 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(39%,#19b4c6), color-stop(100%,#078aa4)); /* Chrome,Safari4+ */
@@ -191,13 +171,16 @@ a {
 	color: #fff;
 	margin-top: 200px;
 	font-family: "Montserrat-Regular", sans-serif;
-	line-height: 65px;/**//**//**/
+	line-height: 65px;
 }
 .aqua h4 {
 	opacity: 0.8;
 	color: #fff;
 	font-family: "Montserrat-Regular", sans-serif;
 	line-height: 65px;
+}
+.aqua a:hover {
+	text-decoration: none;
 }
 .aqua span {
 	font-family: "quicksand-bold", sans-serif;
@@ -214,14 +197,20 @@ a {
 	background-color: #27212c;
 }
 .crimson {
-	color: #ffffff;
 	text-align: center;
 	background-color: #bc3183;
 	font-family: "quicksand-bold", sans-serif;
 	font-weight: bold;
 }
+.crimson a {
+	color: #ffffff;
+}
+.crimson a:hover {
+	text-decoration: none;
+	color: #ffffff;
+}
 .navigation {
- 	background-color: #373c3f;
+	background-color: #373c3f;
 }
 #navbar-collapse-1 a {
 	color: #ffffff;
@@ -236,7 +225,7 @@ a {
 .text-block {
 	background-color: #ebebeb;
 }
-.text-block p{
+.text-block p {
 	font-size: 14px;
 	color: #515151;
 	line-height: 26px;
@@ -248,6 +237,6 @@ a {
 	line-height: 44px;
 	font-family: "Montserrat-Regular", sans-serif;
 }
-.text-block div{
+.text-block div {
 	margin: 0 auto;
 }
